Fixed heading on the main page not being aligned with project cards.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -68,6 +68,10 @@ h1, h2, h3, h4, h5, h6, .font-heading {
   padding: 7rem 0;
 }
 
+.main-title {
+  padding-left: 12px
+}
+
 .filters a {
   text-decoration: none;
   color: #000;
